--- a/WKWebView综合实验/WebViewTest/index.html
+++ b/WKWebView综合实验/WebViewTest/index.html
@@ -8,6 +8,8 @@
         <div style="margin-top: 20px">
             <h2>JS与OC交互</h2>
             <input type="button" value="唤起本地方法(call)" onclick="call()">
+                
+            <input type='file' value="获取图片" accept="image/*" />
         </div>
         <script>
             
